-bug: Add API Automation tool quietMode to additional functions
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: Database upgrade and cacti.sql differ
-bug: drop color setting background on FF does not work
-bug: cli/add_tree.php requires as least a host-id for --list-graphs
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001140: CLI-Script to associate a graph template to a host
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Fix compatibility issues for RRDTool 1.3
-feature: Make the tabs section work a little better with existing plugins
-feature: Disable snmpbulkwalk if $max_oids is less than 2
-feature: Add additional options to speed data query graph automation process
-feature: Add additional indexes to speed data query graph creation
-feature: Allow the cli reindexing of hosts to be limited to a single query